# superlearn

./: COPYRIGHT.txt  Cargo.toml
scripts/: preproc_imagenet_meta.py
src/: io.rs  lib.rs  templates.rs  util.rs
src/formats/: cifar.rs  imagenet.rs  mnist.rs  mod.rs  ptb.rs
src/io/: mod.rs
src/io/codecs/: jpeg.rs  mod.rs
src/io/formats/: cifar.rs  fake.rs  imagenet.rs  mnist.rs  mod.rs  ptb.rs  varraydb.rs
src/io/transforms/: jpeg.rs  mod.rs
src/io/transforms/image/: mod.rs
src/opt/: mod.rs
