[package]
name = "superlearn"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "superlearn"
path = "src/lib.rs"

[dependencies]
rand = "*"
arraydiff = { path = "../arraydiff" }
byteorder = "*"
densearray = "*"
rng = "*"
sharedmem = "*"
stb_image = { path = "../rust-stb-image" }
tar = "*"
turbojpeg = { path = "../libturbojpeg" }
varraydb = { path = "../varraydb" }
