[package]
name = "superlearn"
version = "0.0.1"
authors = ["Peter Jin <peterhaijin@gmail.com>"]

[lib]
name = "superlearn"
path = "src/lib.rs"

[dependencies]
rand = "*"
rustc-serialize = "*"
arraydiff = { path = "../arraydiff" }
byteorder = "*"
csv = "*"
densearray = "*"
extar = { path = "../extar" }
ipp = { path = "../libipp" }
rng = "*"
sharedmem = "*"
stb_image = { path = "../rust-stb-image" }
stopwatch = { path = "../stopwatch" }
tar = "*"
turbojpeg = { path = "../libturbojpeg" }
varraydb = { path = "../varraydb" }
